--- a/pages/getting-started.html
+++ b/pages/getting-started.html
@@ -41,8 +41,34 @@
         <h2><b>Getting Started</b></h2>
         Paper is a simple, elegant &amp; flat Bootstrap Theme. It's free to use and open source. Checkout the source on <a href="#">Github</a>. Paper is built on <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap</a> and written using Sass. It also comes up with <a href="http://srobbin.com/jquery-plugins/backstretch/" target="_blank">Jquery Backstretch</a>, <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">Fontawesome</a> and the <b>Lato</b> font.
         <h3><b>Quick start</b></h3>
-        To start using paper just download the CSS and Javascript files and replace Bootstrap's default ones. Since this is built on Bootstrap you are pretty much good to go! And also don't forget to copy the <b>fonts/</b> directory which holds the fonts (Lato and Fontawesome).
+        Download the project below and replace Bootstrap.
         <br><br><a href="#" class="btn btn-success"><i class="fa fa-arrow-circle-down"></i> Download</a><br>
+        <br>
+        <h4><b>Files to copy</b></h4>
+        <ul>
+          <li>paper.css and paper.js (Development)</li>
+          <li>paper.min.css and paper.min.js(Minified/Production)</li>
+        </ul>
+        <pre>
+paper/
+  └── dist/
+      ├── css/
+      │   ├── fonts/
+      │   │   ├── Lato/
+      │   │   ├── FontAwesome.otf
+      │   │   ├── fontawesome-webfont.eot
+      │   │   ├── fontawesome-webfont.svg
+      │   │   ├── fontawesome-webfont.ttf
+      │   │   └── fontawesome-webfont.woff
+      │   │      
+      │   ├── paper.css
+      │   └── paper.min.css
+      │
+      └── js/
+          ├── paper.js
+          └── paper.min.js
+
+        </pre>
         <h3><b>Custom Theme</b></h3>
         If you want to modify the theme here is what to do.
         <h4><b>Fetch the Repository</b></h4>
