--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </p>
         <p>
           Built with <a href="http://sass-lang.com/"><b>Sass</b></a>,
-          Check out the source code on <a href="#"><i class="fa fa-github"></i> Github</a>
+          Check out the source code on <a href="https://github.com/sudharti/paper"><i class="fa fa-github"></i> Github</a>
         </p><br>
         <p><a class="btn btn-success btn-lg" href="#" role="button"><i class="fa fa-arrow-circle-down"></i> Download</a></p>
       </div>
@@ -52,9 +52,9 @@
     </div>
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1 text-center">
-        <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=medium-slider.js&type=fork"
+        <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=paper&type=fork"
           allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe>
-        <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=medium-slider.js&type=watch"
+        <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=paper&type=watch"
         allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe>
         <a class="twitter-share-button" href="https://twitter.com/share" data-count="none" data-via="sudharshan_iyer">Tweet</a>
         <div class="g-plusone" data-size="medium" data-align="right" data-annotation="bubble"></div>
