Open in new tab links

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       <div class="jumbotron text-center">
         <h1>Paper</h1>
         <p>
-          Simple, Elegant &amp; Flat <a href="http://getbootstrap.com">Bootstrap</a> Theme
+          Simple, Elegant &amp; Flat <a href="http://getbootstrap.com" target="_blank">Bootstrap</a> Theme
         </p>
         <p>
-          Built with <a href="http://sass-lang.com/"><b>Sass</b></a>,
-          Check out the source code on <a href="https://github.com/sudharti/paper"><i class="fa fa-github"></i> Github</a>
+          Built with <a href="http://sass-lang.com/" target="_blank"><b>Sass</b></a>,
+          Check out the source code on <a href="https://github.com/sudharti/paper" target="_blank"><i class="fa fa-github"></i> Github</a>
         </p><br>
         <p><a class="btn btn-success btn-lg" href="#" role="button"><i class="fa fa-arrow-circle-down"></i> Download</a></p>
       </div>
