--- a/pages/getting-started.html
+++ b/pages/getting-started.html
@@ -39,7 +39,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <h2><b>Getting Started</b></h2>
-        Paper is a simple, elegant &amp; flat Bootstrap Theme. It's free to use and open source. Checkout the source on <a href="#">Github</a>. Paper is built on <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap</a> and written using Sass. It also comes up with <a href="http://srobbin.com/jquery-plugins/backstretch/" target="_blank">Jquery Backstretch</a>, <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">Fontawesome</a> and the <b>Lato</b> font.
+        Paper is a simple, elegant &amp; flat Bootstrap Theme. It's free to use and open source. Checkout the source on <a href="https://github.com/sudharti/paper" target="_blank">Github</a>. Paper is built on <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap</a> and written using Sass. It also comes up with <a href="http://srobbin.com/jquery-plugins/backstretch/" target="_blank">Jquery Backstretch</a>, <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">Fontawesome</a> and the <b>Lato</b> font.
         <h3><b>Quick start</b></h3>
         Download the project below and replace Bootstrap.
         <br><br><a href="#" class="btn btn-success"><i class="fa fa-arrow-circle-down"></i> Download</a><br>
@@ -73,7 +73,7 @@ paper/
         If you want to modify the theme here is what to do.
         <h4><b>Fetch the Repository</b></h4>
         <ol>
-          <li>Install <a href="http://git-scm.com/book/en/v2/Getting-Started-Installing-Git">Git</a></li>
+          <li>Install <a href="http://git-scm.com/book/en/v2/Getting-Started-Installing-Git" target="_blank">Git</a></li>
           <li>Clone the Repository using <code>git clone git@github.com:sudharti/paper.git</code></li>
           <li>This will download the master branch of the project's code to your system</li>
           <li>The project's folder structure is descibed below</li>
@@ -146,11 +146,11 @@ paper/
         </div>
         <h4><b>Grunt &amp; Bower</b></h4>
         <p>
-          <a href="http://gruntjs.com/">Grunt - The Javascript Task Runner</a> is used for automating tasks and compile the source. Paper also uses bower to fetch and install packages and their dependencies.
+          <a href="http://gruntjs.com/" target="_blank">Grunt - The Javascript Task Runner</a> is used for automating tasks and compile the source. Paper also uses bower to fetch and install packages and their dependencies.
           So install Grunt and Bower before customizing.
         </p>
         <h5><b>Installing Grunt</b></h5>
-        <p>Grunt and it's plugins can be installed and managed using npm, the default Javascript package manager for nodejs. To install nodejs checkout the following <a href="https://github.com/joyent/node/wiki/installing-node.js-via-package-manager">link</a>
+        <p>Grunt and it's plugins can be installed and managed using npm, the default Javascript package manager for nodejs. To install nodejs checkout the following <a href="https://github.com/joyent/node/wiki/installing-node.js-via-package-manager" target="_blank">link</a>
         You can then install Grunt using the following command</p>
         <pre><code class="language-bash">npm install -g grunt-cli</code></pre>
         <h5><b>Installing Bower</b></h5>
@@ -228,7 +228,7 @@ bower install</code></pre>
           <li>Send Pull Request!</li>
         </ol>
         <h3><b>Issues</b></h3>
-        You can raise issues at <a href="https://github.com/sudharti/paper/issues">https://github.com/sudharti/paper/issues</a>
+        You can raise issues at <a href="https://github.com/sudharti/paper/issues" target="_blank">https://github.com/sudharti/paper/issues</a>
         <br><br>
         <i>If you really like this project you can help Spread the Word. You can also star the project at Github :)</i>
       </div>
