--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           Built with <a href="http://sass-lang.com/" target="_blank"><b>Sass</b></a>,
           Check out the source code on <a href="https://github.com/sudharti/paper" target="_blank"><i class="fa fa-github"></i> Github</a>
         </p><br>
-        <p><a class="btn btn-success btn-lg" href="#" role="button"><i class="fa fa-arrow-circle-down"></i> Download</a></p>
+        <p><a class="btn btn-success btn-lg" href="https://github.com/sudharti/paper/archive/v0.7.zip" role="button"><i class="fa fa-arrow-circle-down"></i> Download</a></p>
       </div>
       </div>
     </div>
@@ -56,7 +56,7 @@
           allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe>
         <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=paper&type=watch"
         allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe>
-        <a class="twitter-share-button" href="https://twitter.com/share" data-count="none" data-via="sudharshan_iyer">Tweet</a>
+        <a class="twitter-share-button" href="https://twitter.com/share" data-count="none" data-via="sudharshan_iyer" data-text="Paper - A Simple, Elegant & Flat Bootstrap theme">Tweet</a>
         <div class="g-plusone" data-size="medium" data-align="right" data-annotation="bubble"></div>
       </div>
     </div>
