--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="dist/css/paper.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-58060768-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </head>
 <body>
   <nav class="navbar navbar-default" role="navigation">
@@ -37,23 +47,23 @@
   <div class="container">
     <div class="row" style="margin-top: 50px;">
       <div class="col-lg-10 col-lg-offset-1">
-      <div class="jumbotron text-center">
-        <h1>Paper</h1>
-        <p>
-          Simple, Elegant &amp; Flat <a href="http://getbootstrap.com" target="_blank">Bootstrap</a> Theme
-        </p>
-        <p>
-          Built with <a href="http://sass-lang.com/" target="_blank"><b>Sass</b></a>,
-          Check out the source code on <a href="https://github.com/sudharti/paper" target="_blank"><i class="fa fa-github"></i> Github</a>
-        </p><br>
-        <p><a class="btn btn-success btn-lg" href="https://github.com/sudharti/paper/archive/0.7.0.zip" role="button"><i class="fa fa-arrow-circle-down"></i> Download</a></p>
-      </div>
+        <div class="jumbotron text-center">
+          <h1>Paper</h1>
+          <p>
+            Simple, Elegant &amp; Flat <a href="http://getbootstrap.com" target="_blank">Bootstrap</a> Theme
+          </p>
+          <p>
+            Built with <a href="http://sass-lang.com/" target="_blank"><b>Sass</b></a>,
+            Check out the source code on <a href="https://github.com/sudharti/paper" target="_blank"><i class="fa fa-github"></i> Github</a>
+          </p><br>
+          <p><a class="btn btn-success btn-lg" href="https://github.com/sudharti/paper/archive/0.7.0.zip" role="button"><i class="fa fa-arrow-circle-down"></i> Download</a></p>
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1 text-center">
         <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=paper&type=fork"
-          allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe>
+        allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe>
         <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=paper&type=watch"
         allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe>
         <a class="twitter-share-button" href="https://twitter.com/share" data-count="none" data-via="sudharshan_iyer" data-text="Paper - A Simple, Elegant & Flat Bootstrap theme">Tweet</a>
