--- a/pages/slider.html
+++ b/pages/slider.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../templates/css/prism.css">
 </head>
 <body data-slide="push">
-  <div id="panel-left" class="mdm-panel">
+  <div id="panel-left" class="slider-panel">
     <ul>
       <li><i class="fa fa-home"></i><a href="#">Home</a></li>
       <li><i class="fa fa-folder-o"></i><a href="#">Collections</a></li>
@@ -66,9 +66,9 @@
           <br><br>
           <pre><code class="language-markup">&lt;body data-slide='push'&gt;</code></pre>
           <br>
-          Add Panel content &lt;div&gt;&lt;/div&gt;
+          Add Panel content &lt;div class="slider-panel"&gt;&lt;/div&gt;
           <br><br>
-          <pre><code class="language-markup">&lt;div id='example-panel'&gt;&lt;/div&gt;</code></pre>
+          <pre><code class="language-markup">&lt;div id='example-panel' class='slider-panel'&gt;&lt;/div&gt;</code></pre>
           <br>
           Enclose the page content inside a .wrapper class &lt;div class="wrapper"&gt;&lt;/div&gt;
           <br><br>
@@ -76,7 +76,7 @@
           <br>
           Add data-panel="[div-id]" to the &lt;button&gt; or &lt;a&gt; which on clicked will trigger the slide transition
           <br><br>
-          <pre><code class="language-markup">&lt;a href="#" data-panel="example-panel"&gt;slide&lt;/a&gt;</code></pre>
+          <pre><code class="language-markup">&lt;a href='#' data-panel='example-panel'&gt;slide&lt;/a&gt;</code></pre>
           <br>
           Voila! Nothing else to do! Check out the example code below. Also view the demo by clicking at the top left button in the navbar.
           <h3><b>Example</b></h3><hr>
