Update links and bower conf

--- a/pages/getting-started.html
+++ b/pages/getting-started.html
@@ -42,7 +42,9 @@
         Paper is a simple, elegant &amp; flat Bootstrap Theme. It's free to use and open source. Checkout the source on <a href="https://github.com/sudharti/paper" target="_blank">Github</a>. Paper is built on <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap</a> and written using Sass. It also comes up with <a href="http://srobbin.com/jquery-plugins/backstretch/" target="_blank">Jquery Backstretch</a>, <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">Fontawesome</a> and the <b>Lato</b> font.
         <h3><b>Quick start</b></h3>
         Download the project below and replace Bootstrap.
-        <br><br><a href="https://github.com/sudharti/paper/archive/v0.7.zip" class="btn btn-success"><i class="fa fa-arrow-circle-down"></i> Download</a><br>
+        <br><br><a href="https://github.com/sudharti/paper/archive/0.7.0.zip" class="btn btn-success"><i class="fa fa-arrow-circle-down"></i> Download</a><br>
+        <br>Or Install using bower:
+        <pre class="language-bash"><code>bower install paper-bootstrap</code></pre>
         <br>
         <h4><b>Files to copy</b></h4>
         <ul>
